# EnergyInvestmentTool

./: .gitignore  README.md  energy-investment-demo.html  project_tree_clean.txt  pyproject.toml  requirements.txt  tree.txt
.venv_energy/: pyvenv.cfg
client/: package-lock.json
client/src/: App.js  index.css  index.js
client/src/__tests__/: integration.test.js
client/src/components/: AuthProvider.jsx  CacheMonitoring.jsx  EnergyInvestmentApp.jsx  EnergyInvestmentDemo.jsx  LoginForm.jsx  ProjectList.jsx  RegisterForm.jsx  ResultsDashboard.jsx  SaveProjectForm.jsx  SensitivityAnalysisVisualization.jsx  SolarMapComponent.jsx  SystemParameterForm.jsx
docs/: roadmap.md
docs/api_research/: api_comparison.md  nasa_api_notes.md  nrel_api_notes.md
docs/components/: frontend_components_doc.md
docs/integration/: integration_guide.md  requirements.md
docs/modules/: api_handler_doc.md  auth_db_systems_doc.md  cache_manager_doc.md  sensitivity_analyzer_doc.md
docs/project/: project_doc.md
docs/system_design/: data_pipline.md
server/: cache.db  energy_tool.db  pyproject.toml
server/src/: api_handler.py  app.py  auth_manager.py  cache_manager.py  calculation_engine.py  config.py  db_manager.py  financial_modeling.py  sensitivity_analyzer.py
server/src/data_sources/: __init__.py  nasa.py  nrel.py
server/src/research/: nasa_test.py  nrel_test.py
tests/: conftest.py  test_api_handler.py  test_app.py  test_calculation_engine.py  test_financial_modeling.py  test_mathematical_accuracy.py
tests/test_data_sources/: test_nasa.py  test_nrel.py
(+3 files in other folders)
